[gd_scene load_steps=6 format=3 uid="uid://b5jc6cmtoh1k7"]

[ext_resource type="Script" uid="uid://vf1ox530hdvb" path="res://UI/CraftingStuff/axe_crafting.gd" id="1_o5t1i"]
[ext_resource type="Texture2D" uid="uid://rmvhls44oyfy" path="res://Inventory/textures/rock_item.png" id="2_n7hyi"]
[ext_resource type="Texture2D" uid="uid://bf04yoq6pa6hl" path="res://Inventory/brown panel.png" id="2_onucc"]
[ext_resource type="Texture2D" uid="uid://qnx6386s4p33" path="res://Inventory/textures/slime.png" id="3_onucc"]
[ext_resource type="Texture2D" uid="uid://c0dqtssywfour" path="res://UI/HideButton.png" id="4_n7hyi"]

[node name="AxeCraft" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5t1i")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 23.0
texture = ExtResource("2_onucc")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 39.0
offset_right = 70.0
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
text = "d"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 39.0
offset_right = 138.0
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
text = "d"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 39.0
offset_right = 104.0
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
text = "d"

[node name="Material" type="Sprite2D" parent="."]
position = Vector2(18, 43)
texture = ExtResource("2_n7hyi")

[node name="Material2" type="Sprite2D" parent="."]
position = Vector2(87, 43)
texture = ExtResource("2_n7hyi")

[node name="Material3" type="Sprite2D" parent="."]
position = Vector2(53, 46)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_n7hyi")

[node name="Result" type="Sprite2D" parent="."]
position = Vector2(18, 13)
texture = ExtResource("3_onucc")

[node name="ResultName" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 9.0
offset_right = 106.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "LongStick"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 59.0
offset_right = 91.0
offset_bottom = 90.0
scale = Vector2(0.5, 0.5)
text = "Craft"

[node name="HideButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 7.0
offset_right = 110.0
offset_bottom = 23.0
texture_normal = ExtResource("4_n7hyi")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 24.0
offset_right = 113.0
offset_bottom = 64.0
